Change font. Change splash img

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Home - e-pretest</title>
   <link rel="stylesheet" href="./public/css/style.css" />
+  <link href="https://fonts.googleapis.com/css?family=Kanit:200,400,600&subset=thai,latin" rel="stylesheet" type="text/css">
 </head>
 <body>
   <div class="react-root"></div>
