--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Home - e-pretest</title>
+  <meta charset="UTF-8">
   <link rel="stylesheet" href="./public/css/style.css" />
   <link href="https://fonts.googleapis.com/css?family=Kanit:200,400,600&subset=thai,latin" rel="stylesheet" type="text/css">
 </head>
